# flaskFrontEnd

./: .env  Dockerfile  pyproject.toml  routes.py  server.py  settings.py  utils.py
static/: style.css
templates/: base.html  main.html  pagination.html  search.html  table.html
